Update LocalPDF downloads for v1.2.0 release on all platforms
Update all download links from v1.1.0 to v1.2.0. Enable Linux
downloads (previously Coming Soon). Add download button to homepage
LocalPDF card. Add Windows and Linux to system requirements.

--- a/localpdf/translations/ar.json
+++ b/localpdf/translations/ar.json
@@ -12,7 +12,7 @@
     "badge": "متاح الآن — مجاني ومفتوح المصدر",
     "title": "مستنداتك.<br>خصوصيتك.<br><span class='gradient-text'>مجموعة أدوات PDF الخاصة بك.</span>",
     "subtitle": "LocalPDF هو مجموعة أدوات PDF كاملة تضع الخصوصية أولاً. اضغط، ادمج، قسّم، احمِ، أضف علامة مائية، حوّل وعدّل مستنداتك — كل شيء يعمل 100% على جهازك. بدون سحابة. بدون رفع ملفات. بدون تنازلات.",
-    "cta_notify": "⬇ تحميل لنظام macOS",
+    "cta_notify": "⬇ تحميل v1.2.0",
     "cta_features": "استكشف المميزات"
   },
   "social_proof": {
@@ -168,11 +168,11 @@
     "title": "احصل على LocalPDF<br><span class='gradient-text'>مجاني للأبد</span>",
     "subtitle": "حمّل LocalPDF لمنصتك. تطبيق واحد، 10 أدوات PDF قوية، صفر اعتماد على السحابة.",
     "mac_title": "تحميل لنظام macOS",
-    "mac_desc": "macOS 11.0+ • Apple Silicon أصلي • 58 ميجابايت",
-    "win_title": "Windows",
-    "win_desc": "Windows 10+ • قريباً",
-    "linux_title": "Linux",
-    "linux_desc": "Ubuntu 22.04+ • قريباً",
+    "mac_desc": "macOS 11.0+ • Apple Silicon أصلي • v1.2.0",
+    "win_title": "تحميل لنظام Windows",
+    "win_desc": "Windows 10+ • v1.2.0",
+    "linux_title": "تحميل لنظام Linux",
+    "linux_desc": "Ubuntu 22.04+ • v1.2.0",
     "star_title": "عرض الكود المصدري",
     "star_desc": "رخصة MIT • مفتوح المصدر",
     "star_cta": "مستودع GitHub",
