--- a/localpdf/translations/en.json
+++ b/localpdf/translations/en.json
@@ -11,7 +11,7 @@
     "badge": "Available Now — Free & Open Source",
     "title": "Your Documents.<br>Your Privacy.<br><span class='gradient-text'>Your PDF Toolkit.</span>",
     "subtitle": "LocalPDF is a complete, privacy-first PDF toolkit. Compress, merge, split, protect, watermark, convert, and edit your documents — all running 100% on your device. No cloud. No uploads. No compromises.",
-    "cta_notify": "⬇ Download for macOS",
+    "cta_notify": "⬇ Download v1.2.0",
     "cta_features": "Explore Features"
   },
   "social_proof": {
@@ -167,11 +167,11 @@
     "title": "Get LocalPDF<br><span class='gradient-text'>Free Forever</span>",
     "subtitle": "Download LocalPDF for your platform. One app, 10 powerful PDF tools, zero cloud dependency.",
     "mac_title": "Download for macOS",
-    "mac_desc": "macOS 11.0+ • Apple Silicon native • 58 MB",
-    "win_title": "Windows",
-    "win_desc": "Windows 10+ • Coming soon",
-    "linux_title": "Linux",
-    "linux_desc": "Ubuntu 22.04+ • Coming soon",
+    "mac_desc": "macOS 11.0+ • Apple Silicon native • v1.2.0",
+    "win_title": "Download for Windows",
+    "win_desc": "Windows 10+ • v1.2.0",
+    "linux_title": "Download for Linux",
+    "linux_desc": "Ubuntu 22.04+ • v1.2.0",
     "star_title": "View Source Code",
     "star_desc": "MIT Licensed • Open Source",
     "star_cta": "GitHub Repository",
