--- a/localpdf/translations/es.json
+++ b/localpdf/translations/es.json
@@ -11,7 +11,7 @@
     "badge": "Disponible Ahora — Gratis y Código Abierto",
     "title": "Tus Documentos.<br>Tu Privacidad.<br><span class='gradient-text'>Tu Kit de PDF.</span>",
     "subtitle": "LocalPDF es un kit de herramientas PDF completo que prioriza la privacidad. Comprime, fusiona, divide, protege, marca de agua, convierte y edita tus documentos — todo ejecutándose 100% en tu dispositivo. Sin nube. Sin subidas. Sin compromisos.",
-    "cta_notify": "⬇ Descargar para macOS",
+    "cta_notify": "⬇ Descargar v1.2.0",
     "cta_features": "Explorar Funciones"
   },
   "social_proof": {
@@ -167,11 +167,11 @@
     "title": "Obtén LocalPDF<br><span class='gradient-text'>Gratis para Siempre</span>",
     "subtitle": "Descarga LocalPDF para tu plataforma. Una app, 10 potentes herramientas PDF, cero dependencia de la nube.",
     "mac_title": "Descargar para macOS",
-    "mac_desc": "macOS 11.0+ • Apple Silicon nativo • 58 MB",
-    "win_title": "Windows",
-    "win_desc": "Windows 10+ • Próximamente",
-    "linux_title": "Linux",
-    "linux_desc": "Ubuntu 22.04+ • Próximamente",
+    "mac_desc": "macOS 11.0+ • Apple Silicon nativo • v1.2.0",
+    "win_title": "Descargar para Windows",
+    "win_desc": "Windows 10+ • v1.2.0",
+    "linux_title": "Descargar para Linux",
+    "linux_desc": "Ubuntu 22.04+ • v1.2.0",
     "star_title": "Ver Código Fuente",
     "star_desc": "Licencia MIT • Código Abierto",
     "star_cta": "Repositorio GitHub",
