--- a/localpdf/translations/fr.json
+++ b/localpdf/translations/fr.json
@@ -11,7 +11,7 @@
     "badge": "Disponible Maintenant — Gratuit et Open Source",
     "title": "Vos Documents.<br>Votre Vie Privée.<br><span class='gradient-text'>Votre Boîte à Outils PDF.</span>",
     "subtitle": "LocalPDF est une boîte à outils PDF complète axée sur la confidentialité. Compressez, fusionnez, divisez, protégez, ajoutez des filigranes, convertissez et éditez vos documents — le tout fonctionnant à 100% sur votre appareil. Pas de cloud. Pas de téléchargement. Aucun compromis.",
-    "cta_notify": "⬇ Télécharger pour macOS",
+    "cta_notify": "⬇ Télécharger v1.2.0",
     "cta_features": "Explorer les Fonctionnalités"
   },
   "social_proof": {
@@ -167,11 +167,11 @@
     "title": "Obtenez LocalPDF<br><span class='gradient-text'>Gratuit pour Toujours</span>",
     "subtitle": "Téléchargez LocalPDF pour votre plateforme. Une app, 10 outils PDF puissants, zéro dépendance cloud.",
     "mac_title": "Télécharger pour macOS",
-    "mac_desc": "macOS 11.0+ • Apple Silicon natif • 58 Mo",
-    "win_title": "Windows",
-    "win_desc": "Windows 10+ • Bientôt disponible",
-    "linux_title": "Linux",
-    "linux_desc": "Ubuntu 22.04+ • Bientôt disponible",
+    "mac_desc": "macOS 11.0+ • Apple Silicon natif • v1.2.0",
+    "win_title": "Télécharger pour Windows",
+    "win_desc": "Windows 10+ • v1.2.0",
+    "linux_title": "Télécharger pour Linux",
+    "linux_desc": "Ubuntu 22.04+ • v1.2.0",
     "star_title": "Voir le Code Source",
     "star_desc": "Licence MIT • Open Source",
     "star_cta": "Dépôt GitHub",
