--- a/localpdf/translations/hi.json
+++ b/localpdf/translations/hi.json
@@ -11,7 +11,7 @@
     "badge": "अभी उपलब्ध — मुफ्त और ओपन सोर्स",
     "title": "आपके दस्तावेज़।<br>आपकी गोपनीयता।<br><span class='gradient-text'>आपका PDF टूलकिट।</span>",
     "subtitle": "LocalPDF एक संपूर्ण, प्राइवेसी-फर्स्ट PDF टूलकिट है। अपने दस्तावेज़ों को कंप्रेस, मर्ज, स्प्लिट, प्रोटेक्ट, वॉटरमार्क, कन्वर्ट और एडिट करें — सब कुछ 100% आपके डिवाइस पर चलता है। कोई क्लाउड नहीं। कोई अपलोड नहीं। कोई समझौता नहीं।",
-    "cta_notify": "⬇ macOS के लिए डाउनलोड करें",
+    "cta_notify": "⬇ v1.2.0 डाउनलोड करें",
     "cta_features": "विशेषताएं देखें"
   },
   "social_proof": {
@@ -167,11 +167,11 @@
     "title": "LocalPDF प्राप्त करें<br><span class='gradient-text'>हमेशा मुफ्त</span>",
     "subtitle": "अपने प्लेटफ़ॉर्म के लिए LocalPDF डाउनलोड करें। एक ऐप, 10 शक्तिशाली PDF टूल, शून्य क्लाउड निर्भरता।",
     "mac_title": "macOS के लिए डाउनलोड करें",
-    "mac_desc": "macOS 11.0+ • Apple Silicon नेटिव • 58 MB",
-    "win_title": "Windows",
-    "win_desc": "Windows 10+ • जल्द आ रहा है",
-    "linux_title": "Linux",
-    "linux_desc": "Ubuntu 22.04+ • जल्द आ रहा है",
+    "mac_desc": "macOS 11.0+ • Apple Silicon नेटिव • v1.2.0",
+    "win_title": "Windows के लिए डाउनलोड करें",
+    "win_desc": "Windows 10+ • v1.2.0",
+    "linux_title": "Linux के लिए डाउनलोड करें",
+    "linux_desc": "Ubuntu 22.04+ • v1.2.0",
     "star_title": "सोर्स कोड देखें",
     "star_desc": "MIT लाइसेंस • ओपन सोर्स",
     "star_cta": "GitHub रिपॉजिटरी",
