--- a/localpdf/translations/ja.json
+++ b/localpdf/translations/ja.json
@@ -11,7 +11,7 @@
     "badge": "今すぐ利用可能 — 無料＆オープンソース",
     "title": "あなたの文書。<br>あなたのプライバシー。<br><span class='gradient-text'>あなたのPDFツールキット。</span>",
     "subtitle": "LocalPDFは、プライバシーを最優先にした完全なPDFツールキットです。圧縮、結合、分割、保護、透かし、変換、編集 — すべてがデバイス上で100%動作します。クラウドなし。アップロードなし。妥協なし。",
-    "cta_notify": "⬇ macOS版をダウンロード",
+    "cta_notify": "⬇ v1.2.0をダウンロード",
     "cta_features": "機能を見る"
   },
   "social_proof": {
@@ -167,11 +167,11 @@
     "title": "LocalPDFを入手<br><span class='gradient-text'>永久に無料</span>",
     "subtitle": "お使いのプラットフォーム用のLocalPDFをダウンロード。1つのアプリ、10の強力なPDFツール、クラウド依存ゼロ。",
     "mac_title": "macOS版をダウンロード",
-    "mac_desc": "macOS 11.0+ • Apple Siliconネイティブ • 58 MB",
-    "win_title": "Windows",
-    "win_desc": "Windows 10+ • 近日公開",
-    "linux_title": "Linux",
-    "linux_desc": "Ubuntu 22.04+ • 近日公開",
+    "mac_desc": "macOS 11.0+ • Apple Siliconネイティブ • v1.2.0",
+    "win_title": "Windows版をダウンロード",
+    "win_desc": "Windows 10+ • v1.2.0",
+    "linux_title": "Linux版をダウンロード",
+    "linux_desc": "Ubuntu 22.04+ • v1.2.0",
     "star_title": "ソースコードを見る",
     "star_desc": "MITライセンス • オープンソース",
     "star_cta": "GitHubリポジトリ",
