--- a/localpdf/translations/ru.json
+++ b/localpdf/translations/ru.json
@@ -11,7 +11,7 @@
     "badge": "Уже доступно — Бесплатно и с открытым кодом",
     "title": "Ваши документы.<br>Ваша конфиденциальность.<br><span class='gradient-text'>Ваш набор инструментов для PDF.</span>",
     "subtitle": "LocalPDF — это полноценный набор инструментов для PDF с приоритетом конфиденциальности. Сжимайте, объединяйте, разделяйте, защищайте, добавляйте водяные знаки, конвертируйте и редактируйте ваши документы — всё работает на 100% на вашем устройстве. Без облака. Без загрузок. Без компромиссов.",
-    "cta_notify": "⬇ Скачать для macOS",
+    "cta_notify": "⬇ Скачать v1.2.0",
     "cta_features": "Обзор возможностей"
   },
   "social_proof": {
@@ -167,11 +167,11 @@
     "title": "Получите LocalPDF<br><span class='gradient-text'>Бесплатно навсегда</span>",
     "subtitle": "Скачайте LocalPDF для вашей платформы. Одно приложение, 10 мощных инструментов PDF, нулевая зависимость от облака.",
     "mac_title": "Скачать для macOS",
-    "mac_desc": "macOS 11.0+ • Нативный Apple Silicon • 58 МБ",
-    "win_title": "Windows",
-    "win_desc": "Windows 10+ • Скоро",
-    "linux_title": "Linux",
-    "linux_desc": "Ubuntu 22.04+ • Скоро",
+    "mac_desc": "macOS 11.0+ • Нативный Apple Silicon • v1.2.0",
+    "win_title": "Скачать для Windows",
+    "win_desc": "Windows 10+ • v1.2.0",
+    "linux_title": "Скачать для Linux",
+    "linux_desc": "Ubuntu 22.04+ • v1.2.0",
     "star_title": "Просмотреть исходный код",
     "star_desc": "Лицензия MIT • Открытый код",
     "star_cta": "Репозиторий GitHub",
