--- a/localpdf/translations/zh.json
+++ b/localpdf/translations/zh.json
@@ -11,7 +11,7 @@
     "badge": "现已推出 — 免费且开源",
     "title": "你的文档。<br>你的隐私。<br><span class='gradient-text'>你的PDF工具箱。</span>",
     "subtitle": "LocalPDF是一款完整的、隐私优先的PDF工具箱。压缩、合并、拆分、保护、加水印、转换和编辑你的文档 — 100%在你的设备上运行。无云端。无上传。无妥协。",
-    "cta_notify": "⬇ 下载 macOS 版",
+    "cta_notify": "⬇ 下载 v1.2.0",
     "cta_features": "探索功能"
   },
   "social_proof": {
@@ -167,11 +167,11 @@
     "title": "获取LocalPDF<br><span class='gradient-text'>永久免费</span>",
     "subtitle": "下载适用于你平台的LocalPDF。一个应用，10个强大的PDF工具，零云依赖。",
     "mac_title": "下载 macOS 版",
-    "mac_desc": "macOS 11.0+ • Apple Silicon 原生 • 58 MB",
-    "win_title": "Windows",
-    "win_desc": "Windows 10+ • 即将推出",
-    "linux_title": "Linux",
-    "linux_desc": "Ubuntu 22.04+ • 即将推出",
+    "mac_desc": "macOS 11.0+ • Apple Silicon 原生 • v1.2.0",
+    "win_title": "下载 Windows 版",
+    "win_desc": "Windows 10+ • v1.2.0",
+    "linux_title": "下载 Linux 版",
+    "linux_desc": "Ubuntu 22.04+ • v1.2.0",
     "star_title": "查看源代码",
     "star_desc": "MIT许可证 • 开源",
     "star_cta": "GitHub仓库",
